project/manifest/todo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: images-volume
          emptyDir: {}
      containers:
        - name: todo-app
          image: todo-app-image

          resources:
            limits:
              cpu: "10m"
              memory: "100Mi"

          volumeMounts:
            - name: images-volume
              mountPath: /usr/src/app/images

          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /todos
              port: 3000


          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /todos
              port: 3000

        - name: nats
          image: nats@sha256:4199deae36b30cf612a8a5ac96614e60dba809dd72d73a5d3534faa521a12261
          resources:
            limits:
              cpu: "10m"
              memory: "100Mi"
