project/manifest/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: project-1
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
